<resources>
    <string name="app_name">GastoViagem</string>
    <string name="total_de_quil_metros">Total de quilõmetros</string>
    <string name="pre_o">Preço</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_ser_de">seu gasto total será de:</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">calcular</string>
    <string name="dist_ncia">Distância</string>
</resources>